[package]
name = "mm1-level-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
crc32fast = "1.4.0"
image = "0.25.1"
num_enum = "0.7.2"
packed_struct = "0.10.1"
tar = "0.4.40"
ucs2 = "0.3.3"
zstd = "0.13.1"
